force-app/main/default/objects/SemiFinishedGoods__c/listViews/SemiFinishedGoods__c.object-meta.xml
<CustomObject>
    <label>Halbzeugvorbereitungsnummer</label>
    <nameField>
        <label>Semi Finished Goods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Halbzeugvorbereitungsnummer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>