force-app/main/default/objects/SemiFinishedGoods__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>