force-app/main/default/objects/SemiFinishedGoods__c/fields/HZVCheckEdit__c.field-meta.xml
<CustomField>
    <fullName>HZVCheckEdit__c</fullName>
    <label>HZV - Check/Treatment (St.22-25)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>