force-app/main/default/objects/SemiFinishedGoods__c/fields/HZVSampleTest__c.field-meta.xml
<CustomField>
    <fullName>HZVSampleTest__c</fullName>
    <label>HZV - Sample test (St.19)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>