force-app/main/default/objects/SemiFinishedGoods__c/fields/HZVStarting__c.field-meta.xml
<CustomField>
    <fullName>HZVStarting__c</fullName>
    <label>HZV - Annealing (St.26)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>