force-app/main/default/objects/SemiFinishedGoods__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <label>Material no</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>