force-app/main/default/objects/SemiFinishedGoods__c/fields/ReblockHomogenize__c.field-meta.xml
<CustomField>
    <fullName>ReblockHomogenize__c</fullName>
    <label>Prim. Rolling - Homogenize (St.15)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>