force-app/main/default/objects/SemiFinishedGoods__c/fields/ReblockTapping__c.field-meta.xml
<CustomField>
    <fullName>ReblockTapping__c</fullName>
    <label>Prim. Rolling - Input format (St.16-18)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>