force-app/main/default/objects/SemiFinishedGoods__c/fields/SELNumber__c.field-meta.xml
<CustomField>
    <fullName>SELNumber__c</fullName>
    <label>SEL no</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>