force-app/main/default/objects/SemiFinishedGoods__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <label>Steel Grade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>